WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
131522
AX: WebProcess at com.apple.WebCore: WebCore::AXObjectCache::rootObject + 18
https://bugs.webkit.org/show_bug.cgi?id=131522
Summary
AX: WebProcess at com.apple.WebCore: WebCore::AXObjectCache::rootObject + 18
chris fleizach
Reported
2014-04-10 18:07:43 PDT
Crash at 33 com.apple.WebCore: WebCore::AXObjectCache::rootObject + 18 <== 33 com.apple.WebKit2: -[WKAccessibilityWebPageObject accessibilityRootObjectWrapper] + 101 18 com.apple.WebKit2: -[WKAccessibilityWebPageObject accessibilityChildren] + 17 | 18 com.apple.WebKit2: -[WKAccessibilityWebPageObject accessibilityAttributeValue:] + 535 | 13 com.apple.AppKit: -[NSObject(NSAccessibilityInternal) _accessibilityValueForAttribute:clientError:] + 228 | | 13 com.apple.AppKit: CopyAppKitUIElementAttributeValueNoCatch + 53 | | 13 com.apple.AppKit: CopyAttributeValue + 359 | | 13 com.apple.HIServices: _AXXMIGCopyAttributeValue + 221 | | 13 com.apple.HIServices: _XCopyAttributeValue + 333 | | 13 com.apple.HIServices: mshMIGPerform + 443 | | 13 com.apple.CoreFoundation: __CFRUNLOOP_IS_CALLING_OUT_TO_A_SOURCE1_PERFORM_FUNCTION__ + 41 | | 13 com.apple.CoreFoundation: __CFRunLoopDoSource1 + 153 | | 13 com.apple.CoreFoundation: __CFRunLoopRun + 1826 | | 13 com.apple.CoreFoundation: CFRunLoopRunSpecific + 290 | | 13 com.apple.HIToolbox: RunCurrentEventLoopInMode + 209 | | 13 com.apple.HIToolbox: ReceiveNextEventCommon + 356 | | 13 com.apple.HIToolbox: BlockUntilNextEventMatchingListInMode + 62 <
rdar://problem/15561031
>
Attachments
patch
(1.51 KB, patch)
2014-04-10 22:24 PDT
,
chris fleizach
kling
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
chris fleizach
Comment 1
2014-04-10 22:24:44 PDT
Created
attachment 229109
[details]
patch
Andreas Kling
Comment 2
2014-04-10 23:58:50 PDT
Comment on
attachment 229109
[details]
patch r=me
chris fleizach
Comment 3
2014-04-11 11:24:42 PDT
http://trac.webkit.org/changeset/167136
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug