AX: WebProcess at com.apple.WebCore: WebCore::AXObjectCache::rootObject + 18 https://bugs.webkit.org/show_bug.cgi?id=131522

Reviewed by Anders Carlsson.

Protect against documents that have had their render tree destroyed, and no longer return a valid cache.

* WebProcess/WebPage/mac/WKAccessibilityWebPageObjectBase.mm:



Canonical link: https://commits.webkit.org/149608@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@167136 268f45cc-cd09-0410-ab3c-d52691b4dbfc